force-app/main/default/objects/OAuth_App_Inventory__c/OAuth_App_Inventory__c.object-meta.xml
<CustomObject>
    <label>OAuth App Inventory</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth App Inventory</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>