force-app/main/default/objects/OAuth_App_Inventory__c/fields/Active_Token_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Token_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Active Token Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>