force-app/main/default/objects/OAuth_App_Inventory__c/fields/ConnectedApp_Id__c.field-meta.xml
<CustomField>
    <fullName>ConnectedApp_Id__c</fullName>
    <externalId>true</externalId>
    <label>ConnectedApp Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>