force-app/main/default/objects/OAuth_App_Inventory__c/fields/Installer_User__c.field-meta.xml
<CustomField>
    <fullName>Installer_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Installed OAuth Apps</relationshipLabel>
    <relationshipName>Installed_OAuth_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>