force-app/main/default/objects/OAuth_App_Inventory__c/fields/Is_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Is_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Blocked</label>
    <type>Checkbox</type>
</CustomField>