force-app/main/default/objects/OAuth_App_Inventory__c/fields/Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen__c</fullName>
    <label>Last Seen</label>
    <type>DateTime</type>
</CustomField>