force-app/main/default/objects/OAuth_App_Inventory__c/fields/Risk_Flags__c.field-meta.xml
<CustomField>
    <fullName>Risk_Flags__c</fullName>
    <label>Risk Flags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broad Scope</fullName>
            </value>
            <value>
                <fullName>Inactive Installer</fullName>
            </value>
            <value>
                <fullName>Stale</fullName>
            </value>
            <value>
                <fullName>Unknown Publisher</fullName>
            </value>
            <value>
                <fullName>Recently Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>