force-app/main/default/objects/OAuth_App_Inventory__c/fields/Scope_Json__c.field-meta.xml
<CustomField>
    <fullName>Scope_Json__c</fullName>
    <label>Scope Json</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>